# vscode-dotnet-insights

./: .gitignore  README.md
.github/workflows/: main.yml
dni-listener/: ConfigFile.cs  DniInsightsListener.cs  DniPs.cs  ProcessEventCollector.cs  dni-listener.csproj
dotnetInsights/: .vscodeignore  README.md  asm-language-configuration.json  hello-world.err  language-configuration.json  package.json  tsconfig.json
dotnetInsights/examples/: hello-world.html
dotnetInsights/media/: .gitattributes  gcStats.js  jit.css  jit.js  main.css  snapshot.css  snapshotGcStats.js  vscode.css
dotnetInsights/src/: AsmDocument.ts  DependencySetup.ts  DotnetInightsTextEditor.ts  DotnetInsightsGcEditor.ts  DotnetInsightsGcSnapshotEditor.ts  DotnetInsightsRuntimeLoadEventsEditor.ts  GcListener.ts  ILDasm.ts  ILDocument.ts  JitOrder.ts  PmiCommand.ts  Profiler.ts  dotnetInsights.ts  dotnetInsightsGc.ts  dotnetInsightsJit.ts  extension.ts  ilDamParser.ts  ildasmTextEditor.ts  onSaveIlDasm.ts  richBody.ts  richHtmlDocument.ts
dotnetInsights/syntaxes/: asm.tmLanguage.json  ildasm.tmLanguage.json  jitdump.tmLanguage.json
gcEventListener/: EventListener.cs  EventPipeBasedListener.cs  HelperClasses.cs  ProcessBasedListener.cs  ProcessNameHelper.cs  gcEventListener.csproj  gcEventListener.sln
gcEventListenerServer/: Program.cs  gcEventListenerServer.csproj
profiler/: Profiler.cs  Profiler.csproj  ProfilerSetup.cs  setup_env.cmd  setup_env.sh
profiler/managed/: Profiler.cs  Profiler.csproj  ProfilerSetup.cs
profiler/native/: CMakeLists.txt  dylib_main.cpp  ev31_profiler.def
profiler/native/asm/aarch64/unix/: asm_helper.S
profiler/native/asm/amd64/unix/: asm_helper.S
profiler/native/asm/amd64/windows/: asm_helper.asm
profiler/native/inc/: CComPtr.hpp  assembly_tracker.hpp  class_factory.hpp  ev31_profiler.hpp  globals.hpp  http_request.hpp  http_response.hpp  method_info.hpp  method_tracker.hpp  profiler_io.hpp  profiler_pal.h  tcp_connection.hpp  thread_tracker.hpp
profiler/native/src/: assembly_tracker.cpp  class_factory.cpp  ev31_profiler.cpp  globals.cpp  guids.cpp  http_request.cpp  http_response.cpp  method_info.cpp  method_tracker.cpp  profiler_io.cpp  stubs.cpp  tcp_connection.cpp  thread_tracker.cpp
profiler/tests/hotpath/: main.cpp
roslynHelper/: CompilerHelper.cs  RoslynHelper.cs  roslynHelper.csproj
